RESULTS/AutoSpec/raw_results/out-4o-oopsla/045_0006/045_merged.txt
/home/yangfp/AutoSpec/AutoSpec/out/045_0006/045_merged.c:65:5: error: unterminated comment
   65 |     /*@;
      |     ^
